--- a/freader/App.axaml
+++ b/freader/App.axaml
@@ -3,8 +3,19 @@
              xmlns:local="using:freader"
              x:Class="freader.App"
               xmlns:themes="clr-namespace:ShadUI;assembly=ShadUI"
-             RequestedThemeVariant="Default">
+             RequestedThemeVariant="Light">
              <!-- "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available options. -->
+
+  <Application.Resources>  
+        <ResourceDictionary>  
+            <ResourceDictionary.ThemeDictionaries>  
+                <ResourceInclude x:Key="Light" Source="avares://ShadUI/Themes/Light.axaml" />  
+                <ResourceInclude x:Key="Dark" Source="avares://ShadUI/Themes/Dark.axaml" />  
+            </ResourceDictionary.ThemeDictionaries>  
+        </ResourceDictionary>  
+        <!-- Your font resources here -->
+   <FontFamily x:Key="LucideIcon">avares://freader/Assets/Fonts#lucide</FontFamily>
+  </Application.Resources>  
 
     <Application.DataTemplates>
         <local:ViewLocator/>
