--- a/freader/Views/LibraryView.axaml
+++ b/freader/Views/LibraryView.axaml
@@ -1,9 +1,40 @@
-<UserControl xmlns="https://github.com/avaloniaui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             x:Class="freader.Views.LibraryView"
-             Padding="16">
-    <Grid>
-        <TextBlock Text="Your Library" FontSize="24" FontWeight="Bold"/>
-        <!-- Placeholder for list of books -->
-    </Grid>
+<UserControl
+  x:Class="freader.Views.LibraryView"
+  xmlns="https://github.com/avaloniaui"
+  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+  xmlns:shadui="clr-namespace:ShadUI;assembly=ShadUI"
+  xmlns:vm="using:freader.ViewModels"
+  x:DataType="vm:LibraryViewModel">
+
+  <ScrollViewer Padding="16">
+    <StackPanel Spacing="16">
+      <TextBlock
+        FontSize="20"
+        FontWeight="Bold"
+        Text="Your Library" />
+      <ItemsControl ItemsSource="{Binding Books}">
+        <ItemsControl.ItemTemplate>
+          <DataTemplate>
+            <shadui:Card
+              Width="160"
+              Height="220"
+              Margin="4"
+              Padding="8">
+              <StackPanel>
+                <Image
+                  Height="140"
+                  Source="{Binding Cover}"
+                  Stretch="UniformToFill" />
+                <TextBlock
+                  Margin="4,8,0,0"
+                  FontWeight="SemiBold"
+                  Text="{Binding Title}" />
+                <TextBlock Opacity="0.6" Text="{Binding Author}" />
+              </StackPanel>
+            </shadui:Card>
+          </DataTemplate>
+        </ItemsControl.ItemTemplate>
+      </ItemsControl>
+    </StackPanel>
+  </ScrollViewer>
 </UserControl>
