--- a/freader/Views/MainView.axaml
+++ b/freader/Views/MainView.axaml
@@ -1,13 +1,58 @@
-<UserControl xmlns="https://github.com/avaloniaui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:freader.Views"
-             xmlns:vm="using:freader.ViewModels"
-             x:Class="freader.Views.MainView"
-             x:DataType="vm:MainViewModel">
+<UserControl
+    x:Class="freader.Views.MainView"
+    xmlns="https://github.com/avaloniaui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:local="clr-namespace:freader.Views"
+    xmlns:shadui="clr-namespace:ShadUI;assembly=ShadUI"
+    xmlns:vm="using:freader.ViewModels"
+    x:DataType="vm:MainViewModel">
 
-    <Grid>
-     <TextBlock Text="Your Library" FontSize="24" FontWeight="Bold"/>
-        <!-- Placeholder for list of books -->
 
-    </Grid>
+    <ScrollViewer Padding="16">
+        <StackPanel Spacing="16">
+            <TextBlock
+                FontSize="20"
+                FontWeight="Bold"
+                Text="Welcome back 👋" />
+            <TextBlock Opacity="0.7" Text="Continue where you left off" />
+
+            <WrapPanel>
+                <shadui:Card
+                    Width="160"
+                    Height="220"
+                    Margin="6"
+                    Padding="8">
+                    <StackPanel>
+                        <Image
+                            Height="140"
+                            Source="/Assets/book-placeholder.png"
+                            Stretch="UniformToFill" />
+                        <TextBlock
+                            Margin="4,8,0,0"
+                            FontWeight="SemiBold"
+                            Text="Book Title" />
+                        <TextBlock Opacity="0.6" Text="Author Name" />
+                    </StackPanel>
+                </shadui:Card>
+
+                <shadui:Card
+                    Width="160"
+                    Height="220"
+                    Margin="6"
+                    Padding="8">
+                    <StackPanel>
+                        <Image
+                            Height="140"
+                            Source="/Assets/book-placeholder.png"
+                            Stretch="UniformToFill" />
+                        <TextBlock
+                            Margin="4,8,0,0"
+                            FontWeight="SemiBold"
+                            Text="Another Book" />
+                        <TextBlock Opacity="0.6" Text="Author Name" />
+                    </StackPanel>
+                </shadui:Card>
+            </WrapPanel>
+        </StackPanel>
+    </ScrollViewer>
 </UserControl>
