--- a/freader/Views/InstanceDialog.axaml
+++ b/freader/Views/InstanceDialog.axaml
@@ -1,9 +1,12 @@
-<Window xmlns="https://github.com/avaloniaui"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-        x:Class="freader.Views.InstanceDialog"
-        Title="InstanceDialog">
-    <TextBlock Text="Another instance of Freader is already running."/>
+<Window
+    x:Class="freader.Views.InstanceDialog"
+    xmlns="https://github.com/avaloniaui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="InstanceDialog"
+    d:DesignHeight="450"
+    d:DesignWidth="800"
+    mc:Ignorable="d">
+    <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Text="Another instance of Freader is already running." />
 </Window>
